--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "imports-loader": "^0.6.5",
+    "jasmine": "^2.4.1",
     "jquery": "^2.2.1",
     "node-getopt": "^0.2.3",
     "node-sass": "^3.4.2",
