--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.5.0",
     "imports-loader": "^0.6.5",
