--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "repository": "https://github.com/Thann/SunShare",
   "version": "0.0.1",
   "scripts": {},
-  "license": "PROPRIETARY",
+  "license": "UNLICENCED",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.7.2",
@@ -20,11 +20,14 @@
     "imports-loader": "^0.6.5",
     "jasmine": "^2.4.1",
     "jquery": "^2.2.1",
+    "json-loader": "^0.5.4",
     "node-getopt": "^0.2.3",
     "node-sass": "^3.4.2",
     "rivets": "^0.8.1",
     "rtcmulticonnection-v3": "^3.2.91",
     "sass-loader": "^3.2.0",
+    "strip-json-comments": "^2.0.1",
+    "strip-json-comments-loader": "0.0.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
