--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "UNLICENCED",
   "dependencies": {},
   "devDependencies": {
+    "aws-sdk": "^2.2.47",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "backbone": "^1.3.2",
     "backbone-subviews": "^1.0.0",
     "bootstrap": "^3.3.6",
+    "busboy": "^0.2.13",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
@@ -29,6 +31,7 @@
     "strip-json-comments": "^2.0.1",
     "strip-json-comments-loader": "0.0.2",
     "style-loader": "^0.13.0",
+    "tmp": "0.0.28",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
