--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.5",
+    "file-type": "^3.8.0",
     "font-awesome": "^4.5.0",
     "imports-loader": "^0.6.5",
     "jasmine": "^2.4.1",
@@ -25,6 +26,7 @@
     "json-loader": "^0.5.4",
     "node-getopt": "^0.2.3",
     "node-sass": "^3.4.2",
+    "read-chunk": "^1.0.1",
     "rivets": "^0.8.1",
     "rtcmulticonnection-v3": "^3.2.91",
     "sass-loader": "^3.2.0",
