--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-sdk": "^2.2.47",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
     "backbone": "^1.3.2",
     "backbone-subviews": "^1.0.0",
     "bootstrap": "^3.3.6",
